--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="#">And this is a<br />
+									<h2><a href="#">And this is df a<br />
 									massive headline</a></h2>
 									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
