--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="#">And this is df a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<h2><a href="#">About me<br />
+									</a></h2>
+									<p>Soy el mejor Ingeniero Civil que jamas haya caminado la faz <br />
+									de esta tierra. Desde Chiriqui Landia, hasta el amazing Lawrence<br />
+									y todo el panhandle hasta Miami no hay mejor en la rama que yo.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
