--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
 									
 									<h2><a href="#">About me<br />
 									</a></h2>
-									<p>Soy el mejor Ingeniero Civil que jamas haya caminado la faz <br />
-									de esta tierra. Desde Chiriqui Landia, hasta el amazing Lawrence<br />
-									y todo el panhandle hasta Miami no hay mejor en la rama que yo.</p>
+									<p>I have comprehensives experience in the transportation field including, highways, traffic, transit planning, and ground <br />
+										improvement projects. My focus is on designing projects that tackle diversity issues of our modern communities. I have <br/>
+										proven to be a valuable asset to the company that I have worked for. I like to explore innovative solutions for problems <br/> 
+										keeping the economy, safety, and operation into consideration. Experience has helped me to improve my leading, <br /> 
+										technical and scientific skills.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/porfolio.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
