--- a/index.html
+++ b/index.html
@@ -73,24 +73,29 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">August, 2019 - Present</span>
+										<h2><a href="#">Graduate Research Assitant at<br />
+										UFTI</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/RIO_control.JPG" alt="" /></a>
+									<p>Developing algorithms to optimize traffic performance in urban seeting. The conceptual framework is applicable for simulation tools as well as real world implementations</p>
+									<h4 align="left">Tools</h4>
+									<p>Python, CPLEX, gurobi, AMPL, MiniZinc, VISSIM.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<span class="date">August, 2017 - May 2019</span>
+										<h2><a href="#">Research Thesis<br />
+										Driving Simulator Study<br/>
+										KU</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/driv_sim.jpg" alt="" /></a>
+									<p>This research was conducted to fullfil the Master's degree requirement in Civil Engineering at KU.</p>
+									<h4 align="left">Tools</h4>
+									<p>SPSS, MiniSIM, Fixed Based Driving Simulator, R, eyetracking device.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
