--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/porfolio.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<!-- <li><a href="#" class="button large">Full Story</a></li> -->
 								</ul>
 							</article>
 
@@ -82,7 +82,7 @@
 									<h4 align="left">Tools</h4>
 									<p>Python, CPLEX, gurobi, AMPL, MiniZinc, VISSIM.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<!-- <li><a href="#" class="button">Full Story</a></li> -->
 									</ul>
 								</article>
 								<article>
@@ -97,7 +97,7 @@
 									<h4 align="left">Tools</h4>
 									<p>SPSS, MiniSIM, Fixed Based Driving Simulator, R, eyetracking device.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<!-- <li><a href="#" class="button">Full Story</a></li> -->
 									</ul>
 								</article>
 								<article>
