add wsp consultant

--- a/index.html
+++ b/index.html
@@ -81,8 +81,22 @@
 									<p>Developing algorithms to optimize traffic performance in urban seeting. The conceptual framework is applicable for simulation tools as well as real world implementations</p>
 									<h4 align="left">Tools</h4>
 									<p>Python, CPLEX, gurobi, AMPL, MiniZinc, VISSIM.</p>
-									<ul class="actions special">
+									<!-- <ul class="actions special"> -->
 										<!-- <li><a href="#" class="button">Full Story</a></li> -->
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">May, 2019 - August, 2019</span>
+										<h2><a href="#">Highway & safety Consultant<br />
+										at WSP Panama</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/4to_pte.jpg" alt="" /></a>
+									<p>Visibilty checking of two of the interchanges in the project. Geometry Design Assesement</p>
+									<h4 align="left">Tools</h4>
+									<p>AutoCAD Civil 3D, MS. Excel, Infraworks.</p>
+									<!-- <ul class="actions special">
+										<li><a href="#" class="button">Full Story</a></li> -->
 									</ul>
 								</article>
 								<article>
@@ -90,28 +104,17 @@
 										<span class="date">August, 2017 - May 2019</span>
 										<h2><a href="#">Research Thesis<br />
 										Driving Simulator Study<br/>
-										KU</a></h2>
+										at KU</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/driv_sim.jpg" alt="" /></a>
 									<p>This research was conducted to fullfil the Master's degree requirement in Civil Engineering at KU.</p>
 									<h4 align="left">Tools</h4>
 									<p>SPSS, MiniSIM, Fixed Based Driving Simulator, R, eyetracking device.</p>
-									<ul class="actions special">
+									<!-- <ul class="actions special"> -->
 										<!-- <li><a href="#" class="button">Full Story</a></li> -->
 									</ul>
 								</article>
-								<article>
-									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
+
 								<article>
 									<header>
 										<span class="date">April 14, 2017</span>
