--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
 									<header>
 										<span class="date">May, 2019 - August, 2019</span>
 										<h2><a href="#">Highway & safety Consultant<br />
-										at WSP Panama</a></h2>
+										at WSP Panama<br />
+													<br />
+												</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/4to_pte.jpg" alt="" /></a>
 									<p>Visibilty checking of two of the interchanges in the project. Geometry Design Assesement</p>
@@ -117,12 +119,12 @@
 
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<span class="date">August, 2017</span>
+										<h2><a href="#">Highway Engineer<br />
+										at LOUIS BERGER</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/gonza.jpeg" alt="" /></a>
+									<p>Hacia de esclavo junto a la tronquis, mqmf a la izquierda. Do#a a la derecha con la cara tapada, Esclava Suprema.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
