add pdf links for resume and CV

--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
 										improvement projects. My focus is on designing projects that tackle diversity issues of our modern communities. I have <br/>
 										proven to be a valuable asset to the company that I have worked for. I like to explore innovative solutions for problems <br/> 
 										keeping the economy, safety, and operation into consideration. Experience has helped me to improve my leading, <br /> 
-										technical and scientific skills.</p>
+										technical and scientific skills. You can take a look to my 
+										 <a href="https://agustingu.github.io/resume/Agustin_Resume.pdf" target="_blank">RESUME.</a>
+										if you want a brief description of my prijects or to my  
+										<a href="https://agustingu.github.io/CV/Agustin_CV.pdf" target="_blank">CV.</a> <br />
+									if you want more details.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/porfolio.jpg" alt="" /></a>
 								<ul class="actions special">
