add links to social and edit logos links on top

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-researchgate"><span class="label">Rese</span></a></li>
+							<li><a href="https://www.linkedin.com/in/agustin-guerra-h" target="_blank" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+							<li><a href="https://github.com/agustingu" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+							<li><a href="https://www.researchgate.net/profile/Agustin-Guerra" target="_blank" class="icon brands fa-researchgate"><span class="label">Rese</span></a></li>
 						</ul>
 					</nav>
 
@@ -65,7 +65,7 @@
 										 <a href="https://agustingu.github.io/resume/Agustin_Resume.pdf" target="_blank">RESUME.</a>
 										if you want a brief description of my prijects or to my  
 										<a href="https://agustingu.github.io/CV/Agustin_CV.pdf" target="_blank">CV.</a> <br />
-									if you want more details.</p>
+									if you want more details. test</p>
 								</header>
 								<a href="#" class="image main"><img src="images/porfolio.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -258,10 +258,10 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li> -->
+									<li><a href="https://www.facebook.com/agustin.guerra1/" target="_blank" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/agustingh06/" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<!-- <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li> -->
 								</ul>
 							</section>
 						</section>
