--- a/elements.html
+++ b/elements.html
@@ -26,7 +26,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Dojo</a></li>
+							<li><a href="generic.html">Oper. Res Dojo</a></li>
 							<li class="active"><a href="elements.html">Readings</a></li>
 						</ul>
 						<ul class="icons">
