--- a/elements.html
+++ b/elements.html
@@ -27,6 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="generic.html">Oper. Res Dojo</a></li>
+							<li><a href="ml_dojo.html">ML Dojo</a></li>
 							<li class="active"><a href="elements.html">Readings</a></li>
 						</ul>
 						<ul class="icons">
