add new tabs for award and link tabs

--- a/elements.html
+++ b/elements.html
@@ -26,9 +26,10 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
+							<li><a href="awards.html">Awards</a></li>
 							<li><a href="generic.html">Oper. Res Dojo</a></li>
 							<li><a href="ml_dojo.html">ML Dojo</a></li>
-							<li class="active"><a href="elements.html">Readings</a></li>
+							<li class="active"  ><a href="elements.html">Readings</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
