--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="awards.html">Awards</a></li>
 							<li><a href="generic.html">Oper. Res Dojo</a></li>
 							<li><a href="ml_dojo.html">ML Dojo</a></li>
 							<li><a href="elements.html">Readings</a></li>
