--- a/ml_dojo.html
+++ b/ml_dojo.html
@@ -26,7 +26,9 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li class="active"><a href="generic.html">Oper. Res Dojo</a></li>
+							<li><a href="awards.html">Awards</a></li>
+							<li><a href="generic.html">Oper. Res Dojo</a></li>
+							<li class="active"><a href="ml_dojo.html">ML Dojo</a></li>
 							<li><a href="elements.html">Readings</a></li>
 						</ul>
 						<ul class="icons">
