--- a/awards.html
+++ b/awards.html
@@ -54,7 +54,10 @@
 								<div class="image main"><img src="images/fulb.jpg" alt="" /></div>
 								<li> <em>2017:</em> I was honored as one of the recipient of the <a href="https://us.fulbrightonline.org/" target="_blank">Fulbright Scholarship</a>.
 								The Fulbright program is a schilarship program sponsored by the U.S bureau of .</li>
-								<header>
+								<li><em>2015:</em> Collectively acchived the Global Best Project in Roads and Highways award from Engineering News-Record (ENR) for the 
+									 <a href="https://www.louisberger.com/about/awards/2015-enr-global-best-project-roads-and-highways-award-cinta-costera-3-project-panama" target="_blank">Coastal Beltway</a> project.</li>
+									
+									 <header>
 									<h2>Community Service</h2>
 								</header>
 								<li> <em>2019 - 2023:</em> Worked with the ITE student chapters at Gainesville, FL (Adopt a Highway Initiative).</li>
