--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 								<article>
 									<header>
 										<span class="date">August, 2017</span>
-										<h2><a href="#">Highway Engineer</a></h2>
+										<h2><a href="#">Corredor Panama Norte</a></h2>
 										<h6><a href="#">Panama</a></h6>
 									</header>
 									<a  class="image fit"><img src="images/gonza.jpeg" alt="" /></a>
