--- a/elements.html
+++ b/elements.html
@@ -27,8 +27,8 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="awards.html">Awards</a></li>
-							<li><a href="generic.html">Oper. Res Dojo</a></li>
-							<li><a href="ml_dojo.html">ML Dojo</a></li>
+							<li><a href="generic.html">Interests</a></li>
+							<!-- <li><a href="ml_dojo.html">ML Dojo</a></li> -->
 							<li class="active"  ><a href="elements.html">Readings</a></li>
 						</ul>
 						<ul class="icons">
@@ -432,53 +432,36 @@ print 'It took ' + i + ' iterations to sort the deck.';
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
+				<footer id="footer">
+					<section>
+						<section class="alt">
+							<h3>Address</h3>
+							<p>2800 SW Williston Road <br />
+							Gainesville, FL 32608</p>
+						</section>
 						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
+							<h3>Phone</h3>
+							<p><a href="#">(858) 888-6716</a></p>
 						</section>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
+						<section>
+							<h3>Email</h3>
+							<p><a href="#">agustinguerra@ufl.edu</a></p>
 						</section>
-					</footer>
+					
+					</section>
+					<section class="split contact">
+					
+						<section>
+							<h3>Social</h3>
+							<ul class="icons alt">
+								<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li> -->
+								<li><a href="https://www.facebook.com/agustin.guerra1/" target="_blank" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/agustingh06/" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<!-- <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li> -->
+							</ul>
+						</section>
+					</section>
+				</footer>
 
 				<!-- Copyright -->
 					<div id="copyright">
