--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="awards.html">Awards</a></li>
-							<li><a href="generic.html">Oper. Res Dojo</a></li>
-							<li><a href="ml_dojo.html">ML Dojo</a></li>
+							<li><a href="generic.html">Interests</a></li>
+							<!-- <li><a href="ml_dojo.html">ML Dojo</a></li> -->
 							<li><a href="elements.html">Readings</a></li>
 						</ul>
 						<ul class="icons">
