interest progrs op.res

--- a/generic.html
+++ b/generic.html
@@ -52,10 +52,10 @@
 								<hr/>
 								<!-- Text stuff -->
 								<h2>Operation Research Dojo</h2>
-								<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-								This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-								This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>.
-								Finally, this is a  <a href="#">link</a>.</p>
+								<p>Latelly many applications in the transportation industry are seeking to optimize traffic performance exploiting CAV capabilities.
+								Considering that, as a young researchr and courios I'm developing a guide to apply optimization problems with python. I hope
+								this guidance will help anyone with curiosity about the topic.
+								See the <a href="https://github.com/agustingu/Operation-Research">GitHub Repository</a> on how to implement Python to solve optimization problems.</p>
 
 								<hr/>
 								<!-- Text stuff -->
