add celphone and mail links

--- a/generic.html
+++ b/generic.html
@@ -78,11 +78,11 @@
 						</section>
 						<section>
 							<h3>Phone</h3>
-							<p><a href="#">(858) 888-6716</a></p>
+							<p><a href="tel:858-888-6716">(858) 888-6716</a></p>
 						</section>
 						<section>
 							<h3>Email</h3>
-							<p><a href="#">agustinguerra@ufl.edu</a></p>
+							<p><a href="mailto:agustinguerra@ufl.edu">agustinguerra@ufl.edu</a></p>
 						</section>
 					
 					</section>
