--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 								<article>
 									<header>
 										<span class="date">November 12, 2013</span>
-										<h2><a href="#">Coastal Bealt</a></h2>
+										<h2><a href="#">Coastal Bealtway</a></h2>
 										<h6><a href="#">Panama</a></h6>
 									</header>
 									<a class="image fit"><img src="images/pic09.jpg" alt="" /></a>
@@ -300,11 +300,11 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(858) 888-6716</a></p>
+								<p><a href="tel:858-888-6716">(858) 888-6716</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">agustinguerra@ufl.edu</a></p>
+								<p><a href="mailto:agustinguerra@ufl.edu">agustinguerra@ufl.edu</a></p>
 							</section>
 						
 						</section>
