add to project summary

--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
 									</header>
 									<a  class="image fit"><img src="images/RIO_control.JPG" alt="" /></a>
 									<h4 align="left">Summary</h4>
-									<p>Developing algorithms to optimize traffic performance in urban seeting. The conceptual framework is applicable for simulation tools as well as real world implementations</p>
+									<p>Developing algorithms to optimize traffic performance in urban seeting. The conceptual framework is applicable for 
+										simulation tools as well as real world implementations. Different types of optimization technics (LP, MINLP, INLP) are applied to 
+										minimize travel time considering CAV capabilities. Statistical analysis is performed to obtain the statistical significance of the improvement
+										achieved by the optimization algorithm.
+									</p>
 									<h4 align="left">Tools</h4>
 									<p>Python, CPLEX, gurobi, AMPL, MiniZinc, VISSIM.</p>
 									<!-- <ul class="actions special"> -->
@@ -109,7 +113,9 @@
 									</header>
 									<a class="image fit"><img src="images/4to_pte.jpg" alt="" /></a>
 									<h4 align="left">Summary</h4>
-									<p>Visibilty checking of two of the interchanges in the project. Geometry Design Assesement</p>
+									<p>The project has been put on hold. During my short consultance period, I provided visibility assesement for the project and geometric design 
+										assesement for other projects in parallel. The visibility and geometric design was modeled on AutoCAD Civil 3D. In addition,
+									some conceptuals design and earthworks estimation were developed for other small projects in parallel.</p>
 									<h4 align="left">Tools</h4>
 									<p>AutoCAD Civil 3D, MS. Excel, Infraworks.</p>
 									<!-- <ul class="actions special">
@@ -125,7 +131,10 @@
 									</header>
 									<a  class="image fit"><img src="images/driv_sim.jpg" alt="" /></a>
 									<h4 align="left">Summary</h4>
-									<p>This research was conducted to fullfil the Master's degree requirement in Civil Engineering at KU.</p>
+									<p>This research was conducted to fullfil the Master's degree requirement in Civil Engineering at KU. This study seek to assess
+										driver behavior in a simulated Connected environment. Furthermore, lane changing model were developed and implemented 
+										in the driver simulator.
+									</p>
 									<h4 align="left">Tools</h4>
 									<p>SPSS, MiniSIM, Fixed Based Driving Simulator, R, eyetracking device.</p>
 									<!-- <ul class="actions special"> -->
@@ -142,7 +151,9 @@
 									<a  class="image fit"><img src="images/gonza.jpeg" alt="" /></a>
 
 									<h4 align="left">Summary</h4>
-									<p>Hacia de esclavo junto a la tronquis, mqmf a la izquierda. Do#a a la derecha con la cara tapada, Esclava Suprema.</p>
+									<p>The project consisted on a boulevard design type of two-lanes per direction in a moderate terrain and an alignment of
+										13KM. Several alternatives were proposed including roundabouts, interchanges, etc. The construction cost of the project was approximately
+									$90 U.S Millions. I served as a lead designer and actively participate in the coordination of the project. </p>
 
 									<h4 align="left">Tools</h4>
 									<p>AutoCAD Civil 3D.</p>
@@ -159,7 +170,11 @@
 									<a  class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 
 									<h4 align="left">Summary</h4>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>									
+									<p>As one of the most ambitious project I've worked on. This project considered the design and rehabilitation of around 153KM. 
+										The projects ran trhough mountanious terrain sorrounding the oriental region of the capital of Colombia. This project considered
+										3 roundabouts, 3 interchanges, several bridges and its cost was estimate son $## U.S Millions. I served as lead highway design 
+										engineer and coordinate the design team and the environmental assesment team. 
+									</p>									
 									
 									<h4 align="left">Tools</h4>
 									<p>AutoCAD Civil 3D.</p>
