--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 										<h2><a href="#">Real-time Corridor Optimizer </a></h2>
 										<h6><a href="#">Gainesville, FL</a></h6>
 									</header>
-									<a  class="image fit"><img src="images/RIO_control.JPG" alt="" /></a>
+									<a  class="image fit"><img src="images/RIO_control.JPG" alt="" height="250"/></a>
 									<h4 align="left">Summary</h4>
 									<p>Developing algorithms to optimize traffic performance in urban seeting. The conceptual framework is applicable for 
 										simulation tools as well as real world implementations. Different types of optimization technics (LP, MINLP, INLP) are applied to 
@@ -111,7 +111,7 @@
 										<h2><a href="#">4th Bridge over the Panama Canal</a></h2>
 										<h6><a href="#">Panama</a></h6>
 									</header>
-									<a class="image fit"><img src="images/4to_pte.jpg" alt="" /></a>
+									<a class="image fit"><img src="images/4to_pte.jpg" alt=""  /></a>
 									<h4 align="left">Summary</h4>
 									<p>The project has been put on hold. During my short consultance period, I provided visibility assesement for the project and geometric design 
 										assesement for other projects in parallel. The visibility and geometric design was modeled on AutoCAD Civil 3D. In addition,
