update resume cv and icons and summary to add

--- a/generic.html
+++ b/generic.html
@@ -32,10 +32,11 @@
 							<li><a href="elements.html">Readings</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/agustin-guerra-h" target="_blank" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+							<li><a href="https://github.com/agustingu" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+							<li><a href="https://www.researchgate.net/profile/Agustin-Guerra" target="_blank" class="icon brands fa-researchgate"><span class="label">Rese</span></a></li>
 						</ul>
 					</nav>
 
@@ -60,10 +61,7 @@
 								<hr/>
 								<!-- Text stuff -->
 								<h2>Machine Learning</h2>
-								<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-								This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-								This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>.
-								Finally, this is a  <a href="#">link</a>.</p>
+								<p>To be added.</p>
 							</section>
 
 					</div>
