--- a/elements.html
+++ b/elements.html
@@ -32,10 +32,11 @@
 							<li class="active"  ><a href="elements.html">Readings</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/agustin-guerra-h" target="_blank" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+							<li><a href="https://github.com/agustingu" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+							<li><a href="https://www.researchgate.net/profile/Agustin-Guerra" target="_blank" class="icon brands fa-researchgate"><span class="label">Rese</span></a></li>
 						</ul>
 					</nav>
 
