delete dojo thing

--- a/generic.html
+++ b/generic.html
@@ -52,7 +52,7 @@
 								</header>
 								<hr/>
 								<!-- Text stuff -->
-								<h2>Operation Research Dojo</h2>
+								<h2>Operation Research</h2>
 								<p>Latelly many applications in the transportation industry are seeking to optimize traffic performance exploiting CAV capabilities.
 								Considering that, as a young researchr and courios I'm developing a guide to apply optimization problems with python. I hope
 								this guidance will help anyone with curiosity about the topic.
