add new links to enr

--- a/awards.html
+++ b/awards.html
@@ -57,7 +57,7 @@
 								The Fulbright program is a schilarship program sponsored by the U.S bureau of .</li>
 								<li><em>2015:</em> The <a href="https://github.com/agustingu/agustingu.github.io/blob/master/images/berger.jpg" target="_blank">Louis Berger team</a> 
 									 collectively acchived the Global Best Project in Roads and Highways award from Engineering News-Record (ENR) for the 
-									 <a href="https://www.louisberger.com/about/awards/2015-enr-global-best-project-roads-and-highways-award-cinta-costera-3-project-panama" target="_blank">Coastal Beltway</a> project.</li>
+									 <a href="https://www.enr.com/articles/16658-best-project-roadshighways-cinta-costera-3" target="_blank">Coastal Beltway</a> project.</li>
 									
 									 <header>
 									<h2>Community Service</h2>
