--- a/index.html
+++ b/index.html
@@ -336,7 +336,8 @@
 										a marine viaduct that surrounds the old town of Panama City. Several amenities such as skate parks, basketball, 
 										tennis courts were added for recreation. The boulevard also improved mobility in an already busy collector in the city. 
 										This project also helped to promote accessibility to a slum area in the city promoting inclusion. 
-										This project was awarded the best global project award by the ERN in 2015. 
+										This project was awarded the best global project award by the  
+										<a href="https://www.enr.com/articles/16658-best-project-roadshighways-cinta-costera-3" target="_blank">ENR</a> in 2015. 
 										My role on this project encompasses assistance to the geometric design, geotechnical, traffic, and water team. 
 										I provided assistance with the traffic signing as well as enhancements in the geometry of U-turns lanes.
 
