--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 										focusing on innovation, safety, sustainability, operation performance, and the economy of the project. <br />
 										
 
-										Here are my  RESUME in <a href="https://agustingu.github.io/resume/Agustin_Resume.pdf" target="_blank">modern </a> and 
-										<a href="https://agustingu.github.io/resume/Agustin_Resume_bw.pdf" target="_blank">classic</a>
+										Here are my  RESUME in <a href="https://agustingu.github.io/resume/Agustin_Resume.pdf" target="_blank">color </a> and 
+										<a href="https://agustingu.github.io/resume/Agustin_Resume_bw.pdf" target="_blank">b&w</a>
 										format for your convenience. <!--  <a href="https://agustingu.github.io/CV/Agustin_CV.pdf" target="_blank">CV.</a>  -->
 										I am currently looking for internships for Summer 2022. </p>
 								
