--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 										Here are my  RESUME in <a href="https://agustingu.github.io/resume/Agustin_Resume.pdf" target="_blank">color </a> and 
 										<a href="https://agustingu.github.io/resume/Agustin_Resume_bw.pdf" target="_blank">b&w</a>
-										format for your convenience. <!--  <a href="https://agustingu.github.io/CV/Agustin_CV.pdf" target="_blank">CV.</a>  -->
+										format. <!--  <a href="https://agustingu.github.io/CV/Agustin_CV.pdf" target="_blank">CV.</a>  -->
 										I am currently looking for internships for Summer 2022. </p>
 								
 								<a class="image main"><img src="images/porfolio.jpg" alt="" /></a>
