--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 									<h2><a href="#">About me<br /></a></h2>
 
 								</header>
-									<p> I'm a Civil Engineer and currently pursuing a Ph.D. degree. After my bachelor's degree, 
-										I had the opportunity of gaining experience in the transportation field  +5 years, 
-										especially in the Latin-American & Caribbean (LAC) Region. I have comprehensive experience 
-										in the transportation field including, highway design, slope-stability analysis and modeling,
-										and in a lesser way traffic analysis and modeling, and ground improvement technics.<br/>
+									<p> I am a Civil Engineer with +5 years of experience in the transportation industry in the Latin-American 
+										(LAC) Region. I have a comprehensive experience in the transportation field including, highway design, 
+										slope-stability analysis and modeling, and in a lesser way traffic analysis and modeling, and ground 
+										improvement technics.<br/>
 
-										Currently, I'm conducting my research in traffic operation developing an optimization
-										algorithm to exploit Connected and Automated Vehicles capabilities to improve traffic 
+										Currently, I am pursuing a PhD. in Civil Engineering at the University of Florida. 
+										I am conducting my research in traffic operation developing optimization
+										implementations to exploit Connected and Automated Vehicles capabilities to improve traffic 
 										performance under the advising of <a href="https://www.essie.ufl.edu/people/name/lily-elefteriadou/" target="_blank">Dr. Lily Elefteriadou.</a>
 										My research is motivated by the 
 										desire of providing commuters with more freedom of doing other tasks while driving.  
@@ -75,9 +75,9 @@
 										focusing on innovation, safety, sustainability, operation performance, and the economy of the project. <br />
 										
 
-										Here are my  RESUME in <a href="https://agustingu.github.io/resume/Agustin_Resume.pdf" target="_blank">color </a> and 
-										<a href="https://agustingu.github.io/resume/Agustin_Resume_bw.pdf" target="_blank">b&w</a>
-										format. <!--  <a href="https://agustingu.github.io/CV/Agustin_CV.pdf" target="_blank">CV.</a>  -->
+										Here are my  RESUME in <a href="https://agustingu.github.io/resume/Agustin_Resume.pdf" target="_blank">color-modern </a> and 
+										<a href="https://agustingu.github.io/resume/Agustin_Resume_bw.pdf" target="_blank">b&w-classic</a>
+										formats. <!--  <a href="https://agustingu.github.io/CV/Agustin_CV.pdf" target="_blank">CV.</a>  -->
 										I am currently looking for internships for Summer 2022. </p>
 								
 								<a class="image main"><img src="images/porfolio.jpg" alt="" /></a>
