--- a/elements.html
+++ b/elements.html
@@ -51,8 +51,10 @@
 
 								<!-- Text stuff -->
 									<h2>Readings</h2>
-									<p>I strongly believe that engineers must be updating themselves with new technologies and trends in engineering. 
-										Considering this I have developed this space where I'll provide summaries on several topics in the transportation field.
+									<p>I strongly believe that engineers must be updating themselves with new technologies and trends in their
+										respective field of expertise. 
+										Considering this, I have developed this space where I will be providing summaries on several topics in the 
+										transportation field for future reference and courios readers.
 
 									</a></p>
 									
