--- a/awards.html
+++ b/awards.html
@@ -54,7 +54,7 @@
 								<h2> Awards </h2>
 								<div class="image main"><img src="images/fulb.jpg" alt="" /></div>
 								<li> <em>2017:</em> I was honored as one of the recipient of the <a href="https://us.fulbrightonline.org/" target="_blank">Fulbright Scholarship</a>.
-								The Fulbright program is sponsored by the U.S Bureau of Educational and Cultural Affairs.</li>
+								This program is sponsored by the U.S Bureau of Educational and Cultural Affairs.</li>
 								<li><em>2015:</em> The <a href="https://github.com/agustingu/agustingu.github.io/blob/master/images/berger.jpg" target="_blank">Louis Berger team</a> 
 									 collectively achieved the Global Best Project in Roads and Highways award from Engineering News-Record (ENR) for the 
 									 <a href="https://www.enr.com/articles/16658-best-project-roadshighways-cinta-costera-3" target="_blank">Coastal Beltway</a> project.</li>
