--- a/generic.html
+++ b/generic.html
@@ -54,14 +54,14 @@
 								<!-- Text stuff -->
 								<h2>Operation Research</h2>
 								<p>Latelly many applications in the transportation industry are seeking to optimize traffic performance exploiting CAV capabilities.
-								Considering that, as a young researchr and courios I'm developing a guide to apply optimization problems with python. I hope
+								Hence, as a young researcher and curios engineer I'm developing a guide to implement optimization problems with python. I hope
 								this guidance will help anyone with curiosity about the topic.
-								See the <a href="https://github.com/agustingu/Operation-Research">GitHub Repository</a> on how to implement Python to solve optimization problems.</p>
+								See the <a href="https://github.com/agustingu/Operation-Research">GitHub Repository</a> on how to use Python to solve optimization problems.</p>
 
 								<hr/>
 								<!-- Text stuff -->
 								<h2>Machine Learning</h2>
-								<p>To be added.</p>
+								<p>Currently working on it.</p>
 							</section>
 
 					</div>
