--- a/elements.html
+++ b/elements.html
@@ -57,7 +57,15 @@
 										transportation field for future reference and courios readers.
 
 									</a></p>
-									
+									<hr />
+									<h3>Professional Development</h3>
+									<ol>
+										<li>The Sense of Style: The Thinking Person's Guide to Writing in the 21st Century.
+											<i>Book by Steven Pinker </i></li>
+										<!-- <li>Etiam vel felis at viverra.</li> <i>italic</i>
+										<li>Felis enim feugiat magna.</li>
+										<li>Etiam vel felis nullam.</li>
+										<li>Felis enim et tempus.</li> -->
 
 
 					</div>
