--- a/elements.html
+++ b/elements.html
@@ -66,6 +66,16 @@
 										<li>Felis enim feugiat magna.</li>
 										<li>Etiam vel felis nullam.</li>
 										<li>Felis enim et tempus.</li> -->
+									</ol>
+									<h3>Research Development</h3>
+									<ol>
+										<li>A cooperative driving framework for urban arterials in mixed traffic conditions.
+											<i> <a href="https://doi.org/10.1016/j.trc.2020.102918" target="_blank">Paper.</a>
+												 by Yang et al., 2021 </i></li>
+										<!-- <li>Etiam vel felis at viverra.</li> <i>italic</i>
+										<li>Felis enim feugiat magna.</li>
+										<li>Etiam vel felis nullam.</li>
+										<li>Felis enim et tempus.</li> -->									
 
 
 					</div>
