--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Agustin Guerra H.<br /></h1>
+						<h1>Agustin Guerra<br /></h1>
 					
-						<p>Transportation Engineer </a>.</p>
+						<p>Engineering Professional </a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -60,7 +60,7 @@
 									<h2><a href="#">About me<br /></a></h2>
 
 								</header>
-									<p> I am a Civil Engineer with +5 years of experience in the transportation industry. 
+									<p> I am an engineering professional with +5 years of experience in the transportation industry. 
 										My experience includes highway design, 
 										slope-stability analysis and modeling. Recently I have started learning traffic analysis and modeling, and ground 
 										improvement technics.<br/>
@@ -91,7 +91,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">August, 2019 - Present</span>
+										<span class="date">Graduate Research Assistant </span>
 										<h2><a href="#">Real-time Corridor Optimizer </a></h2>
 										<h6><a href="#">Gainesville, FL</a></h6>
 									</header>
@@ -112,7 +112,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">May, 2019 - August, 2019</span>
+										<span class="date">Highway Consultant</span>
 										<h2><a href="#">4th Bridge over the Panama Canal</a></h2>
 										<h6><a href="#">Panama</a></h6>
 									</header>
@@ -131,7 +131,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">August, 2017 - May 2019</span>
+										<span class="date">Graduate Student</span>
 										<h2><a href="#">Research Thesis<br />
 										Driving Simulator Study</a></h2>
 										<h6><a href="#">Lawrence, KS</a></h6>
@@ -151,7 +151,7 @@
 
 								<article>
 									<header>
-										<span class="date">August, 2017</span>
+										<span class="date">Highway Engineer</span>
 										<h2><a href="#">Corredor Panama Norte</a></h2>
 										<h6><a href="#">Panama</a></h6>
 									</header>
@@ -171,8 +171,8 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Perimetral Oriente de Cundinamarca</a></h2>
+										<span class="date">Highway Engineer</span>
+										<h2><a href="#">Perimetral Oriental de Bogota</a></h2>
 										<h6><a href="#">Colombia</a></h6>
 									</header>
 									<a  class="image fit"><img src="images/pic06.jpg" alt="" /></a>
@@ -196,9 +196,8 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Line 1 of the Panama Metro<br />
-										primis vestibulum</a></h2>
+										<span class="date">Highway Engineer</span>
+										<h2><a href="#">Line 1 of the Panama Metro</h2>
 										<h6><a href="#">Panama</a></h6>
 									</header>
 									<a  class="image fit"><img src="images/pic01.jpg" alt="" /></a>
@@ -222,7 +221,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 7, 2017</span>
+										<span class="date">Specialist Assistant</span>
 										<h2><a href="#">Panamerican Highway</a></h2>
 										<h6><a href="#">Panama</a></h6>
 									</header>
@@ -245,7 +244,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 7, 2017</span>
+										<span class="date">Highway Engineer</span>
 										<h2><a href="#">Corredor Turistico La Barca - El Progreso -Tela</a></h2>
 										<h6><a href="#">Honduras</a></h6>
 									</header>
@@ -268,7 +267,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 7, 2017</span>
+										<span class="date">Specialist Assistant</span>
 										<h2><a href="#">Slope Stability Analysis km53</a></h2>
 										<h6><a href="#">Panama</a></h6>
 									</header>
@@ -293,7 +292,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 7, 2017</span>
+										<span class="date">Highway Engineer</span>
 										<h2><a href="#">Chan II</a></h2>
 										<h6><a href="#">Panama</a></h6>
 									</header>
@@ -315,7 +314,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 7, 2017</span>
+										<span class="date">Specialist Assistant </span>
 										<h2><a href="#">Amador Causeway</a></h2>
 										<h6><a href="#">Panama</a></h6>
 									</header>
@@ -336,7 +335,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">November 12, 2013</span>
+										<span class="date">Specialist Assistant </span>
 										<h2><a href="#">Coastal Bealtway</a></h2>
 										<h6><a href="#">Panama</a></h6>
 									</header>
