--- a/index.html
+++ b/index.html
@@ -76,10 +76,8 @@
 										concentrating on innovation, safety, sustainability, operation performance, and the economy of the project. <br />
 										
 
-										Here are my  RESUME in <a href="https://agustingu.github.io/resume/Agustin_Resume.pdf" target="_blank">color-modern </a> and 
-										<a href="https://agustingu.github.io/resume/Agustin_Resume_bw.pdf" target="_blank">b&w-classic</a>
-										formats. <!--  <a href="https://agustingu.github.io/CV/Agustin_CV.pdf" target="_blank">CV.</a>  -->
-										I am currently looking for internships for Summer 2022. </p>
+										Here is my  <a href="https://agustingu.github.io/resume/Agustin_Resume_bw.pdf" target="_blank">RESUME,</a>
+										I am currently looking for an internship (Summer 2022). </p>
 								
 								<a class="image main"><img src="images/porfolio.jpg" alt="" /></a>
 								<!-- <ul class="actions special">
