--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 								</header>
 									<p> I am an engineering professional with +5 years of experience in the transportation industry. 
 										My experience includes highway design, 
-										slope-stability analysis and modeling. Recently I have started learning traffic analysis and modeling, and ground 
-										improvement technics.<br/>
+										and slope-stability analysis. Recently I have started learning ground improvement technics, traffic analysis and modeling. 
+										<br/>
 
-										Currently, I am pursuing a PhD. in Civil Engineering at the University of Florida. 
+										Currently, I am pursuing a PhD in Civil Engineering at the University of Florida. 
 										I am conducting my research in traffic operations. I am developing optimizations'
 										algorithms to exploit Connected and Automated Vehicles capabilities to improve traffic 
-										performance under the advising of <a href="https://www.essie.ufl.edu/people/name/lily-elefteriadou/" target="_blank">Dr. Lily Elefteriadou.</a>
+										performance in arterials under the advising of <a href="https://www.essie.ufl.edu/people/name/lily-elefteriadou/" target="_blank">Dr. Lily Elefteriadou.</a>
 										My research is motivated by my extreme curiosity of evaluating the implementation of new technologies in the 
 										transportation field, and the 
 										desire of providing people with more freedom while commuting.  
