--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 										concentrating on innovation, safety, sustainability, operation performance, and the economy of the project. <br />
 										
 
-										Here is my  <a href="https://agustingu.github.io/resume/Agustin_Resume_bw.pdf" target="_blank">RESUME,</a>
-										I am currently looking for an internship (Summer 2022). </p>
+										Here is my  <a href="https://agustingu.github.io/resume/Agustin_Resume_bw.pdf" target="_blank">RESUME.</a>
+										<!-- I am currently looking for an internship (Summer 2022). </p> -->
 								
 								<a class="image main"><img src="images/porfolio.jpg" alt="" /></a>
 								<!-- <ul class="actions special">
