--- a/elements reference.html
+++ b/elements reference.html
@@ -32,7 +32,7 @@
 							<li class="active"  ><a href="elements.html">Reference</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/agustin-guerra-h" target="_blank" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/agustingu" target="_blank" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 							<li><a href="https://github.com/agustingu" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
