updated news section

--- a/generic.html
+++ b/generic.html
@@ -29,7 +29,7 @@
 							<li><a href="awards.html">Awards</a></li>
 							<li class="active" ><a href="generic.html">Interests</a></li>
 							<!-- <li><a href="ml_dojo.html">ML Dojo</a></li> -->
-							<li><a href="elements.html">Readings</a></li>
+							<li><a href="news.html">News</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/agustingu" target="_blank" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
