--- a/awards.html
+++ b/awards.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic Page - Agustin Guerra H.</title>
+		<title>Agustin Guerra - Awards</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -54,6 +54,9 @@
 								
 								<div class="image main"><img src="images/fulb.jpg" alt="" /></div>
 								<h2> Awards </h2>
+
+								<li> <em>2022:</em> Recipient of the <a href="https://www.itsflorida.org/the-anne-brewer-scholarship-program" 
+									target="_blank">ITS Florida Anne Brewer Academic Scholarships</a>.</li>
 
 								<li> <em>2017:</em> Recipient of the <a href="https://us.fulbrightonline.org/" target="_blank">Fulbright Scholarship</a>
 								 sponsored by the U.S Bureau of Educational and Cultural Affairs.</li>
