update on award and cv

--- a/awards.html
+++ b/awards.html
@@ -56,13 +56,13 @@
 								<h2> Awards </h2>
 
 								<li> <em>2022:</em> Recipient of the <a href="https://www.itsflorida.org/the-anne-brewer-scholarship-program" 
-									target="_blank">ITS Florida Anne Brewer Academic Scholarships</a>.</li>
+									target="_blank">ITS Florida Anne Brewer Academic Scholarships</a></li>
 
 								<li> <em>2017:</em> Recipient of the <a href="https://us.fulbrightonline.org/" target="_blank">Fulbright Scholarship</a>
-								 sponsored by the U.S Bureau of Educational and Cultural Affairs.</li>
+								 sponsored by the U.S Bureau of Educational and Cultural Affairs</li>
 								<li><em>2015:</em> The <a href="https://github.com/agustingu/agustingu.github.io/blob/master/images/berger.jpg" target="_blank">Louis Berger team</a> 
 									 was awarded with the Global Best Project in Roads and Highways recognition by Engineering News-Record (ENR) for the 
-									 <a href="https://www.enr.com/articles/16658-best-project-roadshighways-cinta-costera-3" target="_blank">Coastal Beltway</a> project.</li>
+									 <a href="https://www.enr.com/articles/16658-best-project-roadshighways-cinta-costera-3" target="_blank">Coastal Beltway</a> project</li>
 									
 									 
 								<h2>Service</h2>
